[package]
name = "serde_html_form"
version = "0.2.7"
license = "MIT"
repository = "https://github.com/jplatte/serde_html_form"
description = "(De-)serialization support for the `application/x-www-form-urlencoded` format"
categories = ["encoding", "web-programming"]
keywords = ["serde", "serialization", "urlencoded"]
exclude = ["/.github"]
edition = "2021"
rust-version = "1.56"

[lib]
bench = false

[features]
default = ["ryu"]

[dependencies]
# Percent encoding and mapping of query string to pair of key-values
form_urlencoded = "1.0.1"
# Used for internal buffering during deserialization
indexmap = "2.0.0"
# Fast integer serialization
itoa = "1.0.1"
# Fast and better-looking float serialization
ryu = { version = "1.0.9", optional = true }
# Contains the Serializer and Deserializer traits
serde_core = "1.0.221"

[dev-dependencies]
# For the assert_matches! macro
assert_matches2 = "0.1.0"
# Some tests use structs that derive Serialize / Deserialize
serde = { version = "1.0.221", features = ["derive"] }

# For benchmarks
divan = "0.1.11"
serde_urlencoded = "0.7.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] }

[[bench]]
name = "upstream_comparison"
harness = false
