[package]
name = "serde_html_form"
version = "0.2.8"
license = "MIT"
repository = "https://github.com/jplatte/serde_html_form"
description = "(De-)serialization support for the `application/x-www-form-urlencoded` format"
categories = ["encoding", "web-programming"]
keywords = ["serde", "serialization", "urlencoded"]
exclude = ["/.github"]
edition = "2021"
rust-version = "1.56"

[lib]
bench = false

[features]
default = ["ryu", "std"]
# Use ahash for the internal `IndexMap`s that `serde_html_form` creates
# to buffer inputs in some cases. None of `ahash`s features are enabled by this
# crate. Please depend on ahash yourself and choose the appropriate rng feature
# for your use case such that this crate compiles.
#
# This feature has no effect if the `std` feature is also enabled.
ahash = ["dep:ahash"]
# Use std's default hasher for the internal `IndexMap`s that `serde_html_form`
# creates to buffer inputs in some cases.
std = []

[dependencies]
# Alternative hasher for IndexMap that doesn't require std and is faster
ahash = { version = "0.8.12", optional = true, default-features = false }
# Percent encoding and mapping of query string to pair of key-values
form_urlencoded = { version = "1.0.1", default-features = false, features = ["alloc"] }
# Used for internal buffering during deserialization
indexmap = { version = "2.0.0", default-features = false }
# Fast integer serialization
itoa = "1.0.1"
# Fast and better-looking float serialization
ryu = { version = "1.0.9", optional = true }
# Contains the Serializer and Deserializer traits
serde_core = { version = "1.0.221", default-features = false, features = ["alloc"] }

[dev-dependencies]
# For the assert_matches! macro
assert_matches2 = "0.1.0"
# For snapshot testing
insta = "1.45.0"
# Some tests use structs that derive Serialize / Deserialize
serde = { version = "1.0.221", features = ["derive"] }

# For benchmarks
divan = "0.1.11"
serde_urlencoded = "0.7.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] }

[[bench]]
name = "upstream_comparison"
harness = false
